// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination component should render correctly when total items is 0 1`] = `
.c3 {
  font-size: 14px;
  font-weight: 500;
  color: inherit;
}

.c1 {
  background-color: transparent;
  border: none;
  padding: 8px 10px;
  border-radius: 3px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #BDBDBD;
  color: #BDBDBD;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1:hover {
  cursor: pointer;
}

.c1:focus {
  outline: none;
}

.c1 .sc-AykKD * {
  fill: #BDBDBD;
}

.c1:disabled {
  cursor: not-allowed;
}

.c1 .sc-AykKD + .c2 {
  margin-left: 10px;
}

.c1 .c2 + .sc-AykKD {
  margin-left: 10px;
}

.c0 {
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 li {
  margin: 0 4px;
}

.c0 li:last-child {
  margin-right: 8px;
}

.c0 li:first-child {
  margin-left: 8px;
}

<div>
  <ul
    class="c0"
  >
    <li>
      <button
        class="c1"
        color="primary"
        disabled=""
        type="button"
      >
        <span
          class="c2 c3"
        >
          First
        </span>
      </button>
    </li>
    <li>
      <button
        class="c1"
        color="primary"
        disabled=""
        type="button"
      >
        <span
          class="c2 c3"
        >
          Prev
        </span>
      </button>
    </li>
    <li>
      <button
        class="c1"
        color="primary"
        disabled=""
        type="button"
      >
        <span
          class="c2 c3"
        >
          Next
        </span>
      </button>
    </li>
    <li>
      <button
        class="c1"
        color="primary"
        disabled=""
        type="button"
      >
        <span
          class="c2 c3"
        >
          Last
        </span>
      </button>
    </li>
  </ul>
</div>
`;

exports[`Pagination component should render correctly with all the default props 1`] = `
.c3 {
  font-size: 14px;
  font-weight: 500;
  color: inherit;
}

.c1 {
  background-color: transparent;
  border: none;
  padding: 8px 10px;
  border-radius: 3px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #BDBDBD;
  color: #BDBDBD;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1:hover {
  cursor: pointer;
}

.c1:focus {
  outline: none;
}

.c1 .sc-AykKD * {
  fill: #BDBDBD;
}

.c1:disabled {
  cursor: not-allowed;
}

.c1 .sc-AykKD + .c2 {
  margin-left: 10px;
}

.c1 .c2 + .sc-AykKD {
  margin-left: 10px;
}

.c4 {
  background-color: transparent;
  border: none;
  padding: 8px 10px;
  border-radius: 3px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #012040;
  background-color: #012040;
  color: #ffffff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4:hover {
  cursor: pointer;
}

.c4:focus {
  outline: none;
}

.c4 .sc-AykKD * {
  fill: #ffffff;
}

.c4:disabled {
  cursor: not-allowed;
}

.c4 .sc-AykKD + .c2 {
  margin-left: 10px;
}

.c4 .c2 + .sc-AykKD {
  margin-left: 10px;
}

.c5 {
  background-color: transparent;
  border: none;
  padding: 8px 10px;
  border-radius: 3px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #012040;
  color: #012040;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5:hover {
  cursor: pointer;
}

.c5:focus {
  outline: none;
}

.c5 .sc-AykKD * {
  fill: #012040;
}

.c5:disabled {
  cursor: not-allowed;
}

.c5 .sc-AykKD + .c2 {
  margin-left: 10px;
}

.c5 .c2 + .sc-AykKD {
  margin-left: 10px;
}

.c0 {
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 li {
  margin: 0 4px;
}

.c0 li:last-child {
  margin-right: 8px;
}

.c0 li:first-child {
  margin-left: 8px;
}

<div>
  <ul
    class="c0"
  >
    <li>
      <button
        class="c1"
        color="primary"
        disabled=""
        type="button"
      >
        <span
          class="c2 c3"
        >
          First
        </span>
      </button>
    </li>
    <li>
      <button
        class="c1"
        color="primary"
        disabled=""
        type="button"
      >
        <span
          class="c2 c3"
        >
          Prev
        </span>
      </button>
    </li>
    <li>
      <button
        class="c4"
        color="primary"
        type="button"
      >
        <span
          class="c2 c3"
        >
          1
        </span>
      </button>
    </li>
    <li>
      <button
        class="c5"
        color="primary"
        type="button"
      >
        <span
          class="c2 c3"
        >
          2
        </span>
      </button>
    </li>
    <li>
      <button
        class="c5"
        color="primary"
        type="button"
      >
        <span
          class="c2 c3"
        >
          3
        </span>
      </button>
    </li>
    <li>
      <button
        class="c5"
        color="primary"
        type="button"
      >
        <span
          class="c2 c3"
        >
          4
        </span>
      </button>
    </li>
    <li>
      <button
        class="c5"
        color="primary"
        type="button"
      >
        <span
          class="c2 c3"
        >
          5
        </span>
      </button>
    </li>
    <li>
      <button
        class="c5"
        color="primary"
        type="button"
      >
        <span
          class="c2 c3"
        >
          Next
        </span>
      </button>
    </li>
    <li>
      <button
        class="c5"
        color="primary"
        type="button"
      >
        <span
          class="c2 c3"
        >
          Last
        </span>
      </button>
    </li>
  </ul>
</div>
`;

exports[`Pagination component should render correctly with all the props given 1`] = `
.c3 {
  font-size: 14px;
  font-weight: 500;
  color: inherit;
}

.c1 {
  background-color: transparent;
  border: none;
  padding: 8px 10px;
  border-radius: 3px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #012040;
  background-color: #012040;
  color: #ffffff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1:hover {
  cursor: pointer;
}

.c1:focus {
  outline: none;
}

.c1 .sc-AykKD * {
  fill: #ffffff;
}

.c1:disabled {
  cursor: not-allowed;
}

.c1 .sc-AykKD + .c2 {
  margin-left: 10px;
}

.c1 .c2 + .sc-AykKD {
  margin-left: 10px;
}

.c4 {
  background-color: transparent;
  border: none;
  padding: 8px 10px;
  border-radius: 3px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #012040;
  color: #012040;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4:hover {
  cursor: pointer;
}

.c4:focus {
  outline: none;
}

.c4 .sc-AykKD * {
  fill: #012040;
}

.c4:disabled {
  cursor: not-allowed;
}

.c4 .sc-AykKD + .c2 {
  margin-left: 10px;
}

.c4 .c2 + .sc-AykKD {
  margin-left: 10px;
}

.c0 {
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 li {
  margin: 0 4px;
}

.c0 li:last-child {
  margin-right: 8px;
}

.c0 li:first-child {
  margin-left: 8px;
}

<div>
  <ul
    class="c0"
  >
    <li>
      <button
        class="c1"
        color="primary"
        type="button"
      >
        <span
          class="c2 c3"
        >
          1
        </span>
      </button>
    </li>
    <li>
      <button
        class="c4"
        color="primary"
        type="button"
      >
        <span
          class="c2 c3"
        >
          2
        </span>
      </button>
    </li>
    <li>
      <button
        class="c4"
        color="primary"
        type="button"
      >
        <span
          class="c2 c3"
        >
          3
        </span>
      </button>
    </li>
    <li>
      <button
        class="c4"
        color="primary"
        type="button"
      >
        <span
          class="c2 c3"
        >
          4
        </span>
      </button>
    </li>
  </ul>
</div>
`;
